@@ -1,26 +1,0 @@
-{
-  "blend": {
-    "func": "add",
-    "srcrgb": "srcalpha",
-    "dstrgb": "1-srcalpha"
-  },
-  "vertex": "createbigcannons_color",
-  "fragment": "createbigcannons_color",
-  "attributes": [
-    "Position",
-    "Color",
-    "UV2"
-  ],
-  "samplers": [
-    { "name": "Sampler2" }
-  ],
-  "uniforms": [
-    { "name": "ModelViewMat",   "type": "matrix4x4",  "count": 16,  "values": [ 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0 ] },
-    { "name": "ProjMat",        "type": "matrix4x4",  "count": 16,  "values": [ 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 1.0 ] },
-    { "name": "ColorModulator", "type": "float",      "count": 4,   "values": [ 1.0, 1.0, 1.0, 1.0 ] },
-    { "name": "FogStart",       "type": "float",      "count": 1,   "values": [ 0.0 ] },
-    { "name": "FogEnd",         "type": "float",      "count": 1,   "values": [ 1.0 ] },
-    { "name": "FogColor",       "type": "float",      "count": 4,   "values": [ 0.0, 0.0, 0.0, 0.0 ] },
-    { "name": "FogShape",       "type": "int",        "count": 1,   "values": [ 0 ] }
-  ]
-}
